--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.6.1",
     "pubsub-js": "^1.5.4",
     "react": "^15.0.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^5.0.7",
