--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "start": "node server",
+    "start": "node server --host 0.0.0.0",
     "build": "webpack --config ./webpack.production.config.js --progress --profile --colors",
     "eslint": "eslint ."
   },
