--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-plugin-import": "^1.6.2",
     "babel-preset-stage-0": "^6.24.1",
+    "file-loader": "^1.1.11",
     "prop-types": "^15.6.1",
     "pubsub-js": "^1.5.4",
     "react": "^15.0.2",
@@ -27,7 +28,10 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^5.0.7",
     "react-router": "^2.0.0",
+    "react-weui": "^1.1.3",
     "redux": "^3.7.2",
+    "url-loader": "^1.0.1",
+    "weui": "^1.1.2",
     "zepto": "^1.2.0"
   },
   "devDependencies": {
